DEVELOP Canvas bug fixed and contrast stretching filter added

--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,16 @@ body {
 	display: block;
 }
 
+.header-button-container {
+	padding-bottom: 10px;
+}
+
+.header-button {
+	background: #535353;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50px;
+}
+
 .panel{
 	width: 65%;
     display: inline-block;
@@ -23,7 +33,7 @@ body {
 .header-container h1 {
 	background-image: url(../img/header.jpg);
 	padding: 10px;
-	text-align: center;
+	text-align: right;
 	font-family: "Courier new";
 	font-size: 40px;
 }
@@ -37,6 +47,14 @@ body {
 .input-container .file-upload {
 	background-color: #FFFFFF;
 	display: block;
+	border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50px;
+    width:30%;
+    overflow: hidden;
+}
+
+.input-container .file-upload[type=file] {
+	background-color: #535353;
 }
 
 .hidden {
@@ -74,8 +92,68 @@ body {
 	cursor: pointer;
 }
 
+.threshold-ok {
+	background: #535353;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50px;
+}
+
+.points {
+	display: inline-block;
+}
+
+.point-container {
+	display: block;
+	padding-left: 3px;
+}
+
+.point-input-header {
+	display: inline-block;
+	width: 100%;
+    border-spacing: 10px;
+    border-collapse: separate;
+}
+
+.point-input-header td { 
+    padding-left: 60px;
+}
+
+.point-input {
+	width: 35%;
+}
+
+.point-ok-container {
+	padding-top: 5px;
+}
+
+.point-ok {
+	background: #535353;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50px;
+}
+
 .filter-option {
 	display: block;
+    padding: 6px 20px 8px 20px;
+    margin: 0px 0 10px 0;
+    text-align: center;
+    font-family: 'Open Sans',Arial,sans-serif;
+    font-weight: normal;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: rgba(255,255,255,0.8);
+    background: #404040;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 50px;
+    width: 100%;
+}
+
+.histogram-container {
+	padding-top: 10px;
+}
+
+.pb_histogram {
+	display: inline-block;
     padding: 6px 20px 8px 20px;
     margin: 0px 0 10px 0;
     text-align: center;
@@ -87,7 +165,7 @@ body {
     background: #404040;
     border: 2px solid rgba(0,0,0,0.1);
     border-radius: 50px;
-    width: 100%;
+    width: 20%;
 }
 
 .gamma-filter-option {
